[package]
name = "bdk-kyoto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", default-features = false, features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.kyoto]
git = "https://github.com/rustaceanrob/kyoto"
rev = "526a8dcf88bbce8c029426b45cbd941700ad1aa2"

[dependencies.bdk_kyoto]
git = "https://github.com/ValuedMammal/bdk-kyoto"
rev = "096ccf5cab9f33e95266ee6816876b2d248ce39b"

[dependencies.bdk_wallet]
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"

[dependencies.example_cli]
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"

