[package]
name = "bdk-kyoto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", default-features = false, features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.bdk_kyoto]
#path = "../bdk-kyoto"
git = "https://github.com/ValuedMammal/bdk-kyoto"
branch = "deps/chain"

# Use BDK version alpha.13
[dependencies.bdk_chain]
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"

[dependencies.example_cli]
git = "https://github.com/bitcoindevkit/bdk"
rev = "05438017876c3338d091ca85e52242b455e2193a"
