[package]
name = "bdk-kyoto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", default-features = false, features = ["full"] }

[dependencies.bdk_kyoto]
#path = "../bdk-kyoto"
git = "https://github.com/ValuedMammal/bdk-kyoto"
branch = "deps/chain"

# Use BDK version beta.1
[dependencies.bdk_chain]
git = "https://github.com/bitcoindevkit/bdk"
rev = "17a9850cba06db837b82cef1dbaf2ef1e342f7ec"

[dependencies.example_cli]
git = "https://github.com/bitcoindevkit/bdk"
rev = "17a9850cba06db837b82cef1dbaf2ef1e342f7ec"
